--- a/app.json
+++ b/app.json
@@ -11,6 +11,6 @@
     }
   },
   "website": "https://github.com/rptec/",
-  "repository": "https://github.com/rptec/heroku-vless",
+  "repository": "https://github.com/buuok/kook",
   "stack": "container"
 }
